--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@stripe/stripe-js": "^5.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "stripe": "^17.6.0"
   }
 }
